import fontawesome for icons

--- a/images-practice-project/gallery.html
+++ b/images-practice-project/gallery.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">BeautiFLY</a>
+      <a class="navbar-brand" href="#"><i class="fas fa-image"></i> BeautiFLY</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,54 +30,46 @@
         </ul>
       </div>
     </div>
-  </nav>
-  
+  </nav> 
 <div class="container">  
-
   <div class="jumbotron">
-    <h1>Gallery</h1>
-    <p>Outdoor pictures from around the world.</p>
+    <h1><i class="fas fa-camera-retro"></i> Gallery</h1>
+    <p>Beautiful outdoor pictures from around the world.</p>
   </div>
-
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1462986541242-6a4ac54d214f?ixlib=rb-0.3.5&s=b965ba56c20ba5be84739c2b13e8162a&auto=format&fit=crop&w=700&q=60">      
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1469395013119-ca3b424d83e5?ixlib=rb-0.3.5&s=874f3683654b0c6d8835936cf7d91ddc&auto=format&fit=crop&w=800&q=60">      
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1517398825998-780ca786555f?ixlib=rb-0.3.5&s=26edc0b39f1f092b12d21243cd7e49fb&auto=format&fit=crop&w=800&q=60">    
     </div>
   </div>
-
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1521736154190-4f7fa491f25c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a22df1e797f683f8ff12c0d410f32970&auto=format&fit=crop&w=900&q=60">      
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1503326782762-2926a1fb8651?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f9ca604034e03b68d844857e276e3ebb&auto=format&fit=crop&w=900&q=60">      
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-sm-6">
       <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1498595707991-4fc87268b184?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=96a7f4119969210f928058970de835ee&auto=format&fit=crop&w=900&q=60">    
     </div>
   </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1508136520685-fe5bd8a08052?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=518801e338d483eccadf161024860e43&auto=format&fit=crop&w=800&q=60">      
-      </div>
-      <div class="col-md-4">
-        <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1511350333854-21bcdf3088c5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=eeb6de200fa95739466c12f68053306d&auto=format&fit=crop&w=900&q=60">      
-      </div>
-      <div class="col-md-4">
-        <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1508693926297-1d61ee3df82a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7bb93ea6780c3e286815b252524a02c2&auto=format&fit=crop&w=800&q=60">    
-      </div>
+  <div class="row">
+    <div class="col-lg-4 col-sm-6">
+      <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1508136520685-fe5bd8a08052?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=518801e338d483eccadf161024860e43&auto=format&fit=crop&w=800&q=60">      
     </div>
-
-   
+    <div class="col-lg-4 col-sm-6">
+      <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1511350333854-21bcdf3088c5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=eeb6de200fa95739466c12f68053306d&auto=format&fit=crop&w=900&q=60">      
+    </div>
+    <div class="col-lg-4 col-sm-6">
+      <img class="img-thumbnail" alt="#" src="https://images.unsplash.com/photo-1508693926297-1d61ee3df82a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7bb93ea6780c3e286815b252524a02c2&auto=format&fit=crop&w=800&q=60">    
+    </div>
+  </div>  
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
